[metadata]
name = ezodf
author = Manfred Moitzi
author_email = mozman@gmx.at
maintainer = Anton Shvein
maintainer_email = t0hashvein@gmail.com
license = MIT License
description = A Python package to create/manipulate OpenDocumentFormat files.
keywords =
    ODF
    OpenDocumentFormat
    OpenOffice
    LibreOffice
url = https://github.com/T0ha/ezodf
download_url = https://github.com/T0ha/ezodf/releases
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.2
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Office/Business :: Office Suites
platforms = OS, Independent
provides = ezodf
install_requires =
	weakrefset
	lxml

[options]
packages = ezodf

[bdist_wheel]
universal=1
